--- a/lib/Cargo.toml
+++ b/lib/Cargo.toml
@@ -2,6 +2,9 @@
 name = "paramtest"
 version = "0.1.0"
 edition = "2024"
+license = "MIT"
+repository = "https://github.com/simonhdickson/paramtest"
+authors = ["Simon Dickson <683945+simonhdickson@users.noreply.github.com>"]
 
 [dependencies]
 proc = { path = "../proc" }
