--- a/proc/Cargo.toml
+++ b/proc/Cargo.toml
@@ -2,11 +2,12 @@
 name = "paramtest"
 description = "A library for testing parameterized functions"
 homepage = "https://github.com/simonhdickson/paramtest"
-version = "0.1.0"
+version = "0.1.1"
 edition = "2024"
 license = "MIT"
 repository = "https://github.com/simonhdickson/paramtest"
 authors = ["Simon Dickson <683945+simonhdickson@users.noreply.github.com>"]
+readme = "../readme.md"
 
 [lib]
 proc-macro = true
