And support for tokio

--- a/proc/Cargo.toml
+++ b/proc/Cargo.toml
@@ -13,5 +13,9 @@ readme = "../readme.md"
 proc-macro = true
 
 [dependencies]
+proc-macro2 = "1.0.95"
 quote = "1.0.40"
 syn = { version = "2.0.104", features = ["full"] }
+
+[features]
+tokio = []
